--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,5 @@
-nav-bar work!!!
+<nav class="black">
+  <div class="nav-wrapper">
+    <a href="#" class="brand-logo center">Logotype Gallery</a>
+  </div>
+</nav>
