--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,7 +1,7 @@
-<div class="row grey darken-1">
+<div class="row fondo">
 	<div class="col s4 m3 l2 xl1 " *ngFor="let logo of logos">
 		<div style="max-width: 128px;">
-			<a class=""><img class="responsive-img z-depth-3 white" src="{{logo.imagelink}}"/></a>
+			<a class=""><img class="responsive-img z-depth-3 transparent" src="{{logo.imagelink}}"/></a>
 		</div>
 	</div>
 </div>
