--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -1,3 +1,19 @@
 .fondo {
 background-image: url("../../assets/fondo/32px-Koushi_10x10.svg.png");
 }
+
+img {
+-webkit-box-shadow: 0 1px 6px 1px rgba(0,0,0,0.75);
+-moz-box-shadow: 0 1px 6px 1px rgba(0,0,0,0.75);
+box-shadow: 0 1px 6px 1px rgba(0,0,0,0.75);
+margin-bottom: 20px;
+}
+
+img:hover{
+filter : gray; /* IE6-9 */
+-webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+}
+
+a:hover {
+	cursor:pointer;
+}
